[tool.poetry]
name = "chitose"
version = "0.0.11"
description = "A client library for the AT Protocol (Bluesky) "
license = "MIT"
authors = [
    "Muneyuki Noguchi <nogu.dev@gmail.com>",
]
readme = "README.md"
homepage = "https://github.com/mnogu/chitose"
repository = "https://github.com/mnogu/chitose"
documentation = "https://chitose.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
]

[tool.poetry.dependencies]
python = ">=3.9"
websockets = ">=11.0"

[project.urls]
"Bug Tracker" = "https://github.com/mnogu/chitose/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"